# aars

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS.md  Dockerfile  Makefile  README.md  aars_demo.ipynb  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  pages.yml
benchmarks/: ablations.py  baselines.py  datasets.py  deepeval_eval.py  evaluation_suite.py  local_fixture.py  metrics.py  ragas_eval.py  results_local.json  runner.py  significance.py
config/: logging_config.py  settings.py
config/prompts/: answer.txt  hallucination_checker.txt  intent_router.txt  planner.txt  query_rewriter.txt  reflection.txt  relevance_grader.txt  self_rag_evaluator.txt
docs/: index.html  site.js  styles.css
examples/: batch_ingest.py  compare_modes.py  multi_hop_query.py  quickstart.py
paper/: generate_pdf.py  main.tex  references.bib
paper/figures/: architecture.tex
scripts/: seed_data.py
src/: main.py
src/agents/: hallucination_checker.py  intent_router.py  planner.py  query_rewriter.py  reflection.py  relevance_grader.py  reranker.py  self_rag_evaluator.py
src/fusion/: fusion_pipeline.py  mmr.py  rrf.py
src/generation/: answer_generator.py
src/ingestion/: __init__.py  graph_builder.py  multimodal.py  pipeline.py
src/llm/: client.py
src/pipeline/: graph.py  graph_runner.py  orchestrator.py  state.py  trace.py
src/retrieval/: __init__.py  base.py  graph.py  keyword.py  none.py  registry.py  vector.py
src/utils/: __init__.py  cross_encoder.py  embeddings.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_agents.py  test_chunker.py  test_fusion.py  test_hallucination_checker.py  test_intent_router.py  test_metrics.py  test_relevance_grader.py  test_reranker.py  test_retrievers.py  test_self_rag_evaluator.py  test_trace.py
ui/: app.py
ui/components/: benchmark_tab.py  (+2 more)
(+16 files in other folders)
